fix message label spacing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -788,6 +788,8 @@ form#new_user {
     border: 1px solid;
     border-radius: 20px;
     padding: 5px 10px;
+    display: inline-block;
+    margin: 2px;
 }
 
 .project-panel {
